--- a/01_计算机系统概览/1.7_操作系统管理硬件/02_1.7.3_虚拟内存.md
+++ b/01_计算机系统概览/1.7_操作系统管理硬件/02_1.7.3_虚拟内存.md
@@ -5,3 +5,100 @@ Lecture: 01_计算机系统概览/1.7_操作系统管理硬件
 Content: 02_1.7.3_虚拟内存
 """
 
+### 1.7.3 虚拟内存详解
+
+#### 虚拟内存的概念
+
+虚拟内存（Virtual Memory）是一个抽象概念，它为每个进程提供了一个独立且一致的内存视图，仿佛每个进程都独占整个主存。通过这种方式，操作系统可以有效地管理内存，使多个进程共享系统资源，同时提高系统的稳定性和安全性。
+
+#### 虚拟地址空间
+
+每个进程都拥有一个虚拟地址空间，这是一个统一的内存视图。在Linux系统中，虚拟地址空间从低地址到高地址依次包含以下几个区域：
+
+1. **程序代码和数据段**：存储程序的代码和全局变量。代码段从一个固定地址开始，数据段紧随其后。这些区域在程序执行前已经确定大小，并在程序执行过程中保持不变。
+
+2. **堆（Heap）**：位于代码和数据段之后，用于动态分配内存。堆的大小在程序运行期间可以动态扩展或收缩。
+
+3. **共享库**：位于地址空间的中间部分，存储共享库（如标准C库、数学库等）的代码和数据。共享库的概念使得多个进程可以共享一份库的副本，提高内存利用率。
+
+4. **栈（Stack）**：位于地址空间的顶部，由编译器用来实现函数调用。栈在程序运行期间动态扩展和收缩，每次函数调用时栈增长，函数返回时栈收缩。
+
+5. **内核虚拟内存**：地址空间的最高部分保留给操作系统内核，用户进程不能直接访问这个区域。应用程序需要通过系统调用来请求内核执行操作。
+
+#### 虚拟内存的工作原理
+
+虚拟内存依赖于硬件和操作系统软件之间的复杂交互。基本思想是将进程的虚拟内存内容存储在磁盘上，并将主存作为磁盘的缓存。当进程需要访问某个地址时，如果该地址的数据不在主存中，操作系统会将数据从磁盘加载到主存中。这种机制被称为页面置换。
+
+虚拟内存系统的核心组件是页表（Page Table），它将虚拟地址映射到物理地址。页表的每一项（Page Table Entry, PTE）包含一个虚拟页和一个物理页的映射关系。当进程访问某个虚拟地址时，内存管理单元（MMU）会根据页表将虚拟地址转换为物理地址。如果该地址不在主存中，会触发一个页面错误（Page Fault），操作系统会将所需页面从磁盘加载到主存中。
+
+#### 虚拟内存的优势
+
+1. **内存保护**：虚拟内存提供了一种机制，确保一个进程不能访问另一个进程的内存区域，从而提高了系统的稳定性和安全性。
+
+2. **内存共享**：多个进程可以共享同一个物理内存区域，例如共享库，这样可以节省内存资源。
+
+3. **内存管理**：虚拟内存简化了内存管理。操作系统可以根据需要分配和回收内存，而无需考虑物理内存的实际布局。
+
+4. **内存扩展**：虚拟内存使得程序可以使用比实际物理内存更多的内存，通过将不常用的数据存储在磁盘上，实现内存的扩展。
+
+#### 虚拟内存的实现细节
+
+1. **页表结构**：页表通常分为多级页表，以减少页表的存储开销。例如，x86架构使用二级页表，而现代的64位系统通常使用四级页表。每一级页表都将虚拟地址的一部分映射到下一级页表，直到最终映射到物理地址。
+
+2. **页面置换算法**：当主存中的页面已满时，操作系统需要选择一个页面进行置换。常见的页面置换算法包括最近最少使用（LRU）、先进先出（FIFO）等。这些算法旨在尽量减少页面置换带来的性能开销。
+
+3. **页框分配**：物理内存被分割成固定大小的页框（Page Frame），每个页框可以存储一个虚拟页。当操作系统需要分配新的页面时，会在页框中找到一个空闲页框，并将其分配给新的虚拟页。
+
+4. **地址转换缓存（TLB）**：为了加速地址转换过程，处理器中通常包含一个小型的缓存，称为转换后备缓冲区（TLB）。TLB缓存了最近使用的页表项，大大提高了地址转换的效率。
+
+#### 虚拟内存的应用
+
+1. **程序加载**：当一个程序被加载到内存中时，操作系统会为程序分配虚拟地址空间，并将程序的代码和数据映射到虚拟地址。实际的数据在第一次访问时才会从磁盘加载到主存中。
+
+2. **动态内存分配**：通过虚拟内存，程序可以方便地动态分配和释放内存。例如，C语言中的`malloc`和`free`函数依赖于虚拟内存来管理堆空间。
+
+3. **内存映射文件**：虚拟内存提供了一种机制，可以将文件的内容映射到进程的地址空间。这样，程序可以像访问内存一样访问文件内容，提高了文件访问的效率。
+
+#### 总结
+
+虚拟内存是现代计算机系统中不可或缺的组成部分，它通过为每个进程提供独立的地址空间，实现了内存保护、内存共享和内存管理的功能。理解虚拟内存的工作原理和实现细节，对于开发高效、安全的程序至关重要。虚拟内存系统依赖于硬件和操作系统的协同工作，通过页表和页面置换机制，有效地管理内存资源，提高了系统的整体性能和稳定性。
+
+---
+
+### 虚拟地址空间详解表
+
+| **区域**             | **描述**                                                                                                                                   | **示例**                                                                                                                   |
+|----------------------|--------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------|
+| **程序代码和数据段** | 存储程序的代码和全局变量。代码段从固定地址开始，数据段紧随其后。这些区域在程序执行前已确定大小，并在程序执行过程中保持不变。                     | 程序代码段地址：0x08048000<br>数据段地址：0x08049000                                                                        |
+| **堆（Heap）**       | 用于动态分配内存，位于代码和数据段之后。堆的大小在程序运行期间可以动态扩展或收缩。                                                       | 动态分配内存时，堆地址可能从0x08050000扩展到0x08100000                                                                      |
+| **共享库**           | 存储共享库（如标准C库、数学库等）的代码和数据，位于地址空间的中间部分。共享库使得多个进程可以共享一份库的副本，提高内存利用率。               | 共享库地址：0x70000000                                                                                                      |
+| **栈（Stack）**      | 由编译器用来实现函数调用，位于地址空间的顶部。栈在程序运行期间动态扩展和收缩，每次函数调用时栈增长，函数返回时栈收缩。                        | 栈底地址：0x7fffffff<br>栈顶地址：0x7ffff000                                                                                |
+| **内核虚拟内存**     | 保留给操作系统内核，位于地址空间的最高部分。用户进程不能直接访问这个区域，需要通过系统调用来请求内核执行操作。                                | 内核地址空间：0xc0000000至0xffffffff                                                                                       |
+
+### 虚拟内存的优势详解表
+
+| **优势**           | **描述**                                                                                                                                                                   | **示例**                                                                                             |
+|--------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------|
+| **内存保护**       | 虚拟内存提供了一种机制，确保一个进程不能访问另一个进程的内存区域，从而提高了系统的稳定性和安全性。                                                                       | 一个进程试图访问另一个进程的内存区域时，将触发内存保护异常，操作系统会终止该进程。                  |
+| **内存共享**       | 多个进程可以共享同一个物理内存区域，如共享库，从而节省内存资源。                                                                                                           | 多个进程同时使用标准C库，只需在内存中加载一份标准C库的副本。                                        |
+| **内存管理**       | 虚拟内存简化了内存管理，操作系统可以根据需要分配和回收内存，无需考虑物理内存的实际布局。                                                                                 | 操作系统根据进程需求动态分配和回收内存，不会因为物理内存布局问题导致内存浪费。                      |
+| **内存扩展**       | 虚拟内存使得程序可以使用比实际物理内存更多的内存，通过将不常用的数据存储在磁盘上，实现内存的扩展。                                                                        | 程序在需要时将不常用的数据分页到磁盘，在需要时再从磁盘加载到内存。                                  |
+| **程序隔离**       | 每个进程都有独立的虚拟地址空间，进程之间相互隔离，互不干扰。                                                                                                               | 一个进程的崩溃不会影响其他进程的运行，因为它们的地址空间是独立的。                                  |
+| **提高系统效率**   | 通过内存共享和内存扩展，虚拟内存可以显著提高系统的内存利用效率和整体性能。                                                                                               | 系统可以同时运行多个程序，而无需为每个程序分配独立的物理内存，从而提高整体运行效率。                |
+
+### 虚拟内存的实现细节详解表
+
+| **实现细节**             | **描述**                                                                                                                                                                                                                      | **示例**                                                                                                                                                                                                                      |
+|--------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **页表结构**             | 页表将虚拟地址映射到物理地址。为了减少页表的存储开销，通常使用多级页表。每一级页表将虚拟地址的一部分映射到下一级页表，直到最终映射到物理地址。                                                                                | x86架构使用二级页表，64位系统通常使用四级页表。                                                                                                                                                                               |
+| **页面置换算法**         | 当主存中的页面已满时，操作系统需要选择一个页面进行置换。常见的页面置换算法包括最近最少使用（LRU）、先进先出（FIFO）等。                                                                                                 | LRU算法选择最近最少使用的页面进行置换，FIFO算法选择最早加载的页面进行置换。                                                                                                                                                   |
+| **页框分配**             | 物理内存被分割成固定大小的页框，每个页框可以存储一个虚拟页。当操作系统需要分配新的页面时，会在页框中找到一个空闲页框，并将其分配给新的虚拟页。                                                                               | 物理内存被分割成大小为4KB的页框，当需要分配新的页面时，操作系统从空闲页框列表中选择一个进行分配。                                                                                                                             |
+| **地址转换缓存（TLB）**  | 为了加速地址转换过程，处理器中通常包含一个小型的缓存，称为转换后备缓冲区（TLB）。TLB缓存了最近使用的页表项，大大提高了地址转换的效率。                                                                                         | TLB命中率高时，地址转换效率显著提高，因为大部分地址转换请求可以直接从TLB中获得。                                                                                                                                               |
+| **页面错误处理**         | 当进程访问的页面不在主存中时，会触发页面错误。操作系统将页面从磁盘加载到主存中，并更新页表以反映新的映射关系。                                                                                                           | 进程访问某个虚拟地址时，如果该地址不在主存中，触发页面错误，操作系统将相应页面从磁盘加载到主存。                                                                                                                             |
+| **虚拟地址到物理地址映射** | 页表将虚拟地址分成若干部分，每一部分通过页表进行转换，最终映射到物理地址。多级页表结构使得每一级页表只需要存储部分地址信息，减少了页表的存储开销。                                                                                 | 64位系统的虚拟地址分为四级，每级页表存储一部分地址信息，最终映射到物理地址。                                                                                                                                                   |
+| **内存映射文件**         | 虚拟内存提供了一种机制，可以将文件的内容映射到进程的地址空间。这样，程序可以像访问内存一样访问文件内容，提高了文件访问的效率。                                                                                               | 通过`mmap`系统调用将文件映射到虚拟地址空间，程序可以直接读取或写入映射的内存区域，而无需使用传统的文件I/O操作。                                                                                                               |
+| **换入换出策略**         | 操作系统通过换入换出策略，将不常用的页面换出到磁盘，当需要时再换入到主存。通过这种方式，虚拟内存系统可以支持超出物理内存容量的进程运行。                                                                                          | 操作系统检测到某些页面长时间未被访问时，将其换出到磁盘。进程再次访问该页面时，再将其换入到主存中。                                                                                                                             |
+
+### 总结
+
+通过以上详细的表格，我们深入了解了虚拟地址空间的结构、虚拟内存的优势及其实现细节。虚拟内存系统通过页表、TLB、页面置换和换入换出策略，有效管理和优化内存资源，为每个进程提供独立的地址空间，提高了系统的安全性、稳定性和性能。理解这些概念和细节，对于开发高效、可靠的程序至关重要。
