--- a/02_程序结构和执行/2.1_表示和操作信息/06_2.1.7_C语言中的位级操作.md
+++ b/02_程序结构和执行/2.1_表示和操作信息/06_2.1.7_C语言中的位级操作.md
@@ -5,3 +5,78 @@ Lecture: 02_程序结构和执行/2.1_表示和操作信息
 Content: 06_2.1.7_C语言中的位级操作
 """
 
+### 2.1.7 C语言中的位级操作
+
+C语言支持多种位级布尔运算，这些运算在许多计算任务中都非常有用，尤其是在涉及低级硬件操作和优化代码性能时。位级操作符在C语言中的表示如下：
+- **按位与（AND, &）**：对每个位执行与操作，结果是两个操作数相应位都为1时该位为1，否则为0。
+- **按位或（OR, |）**：对每个位执行或操作，结果是两个操作数中至少有一个位为1时该位为1，否则为0。
+- **按位非（NOT, ~）**：对每个位执行非操作，结果是将每个位取反。
+- **按位异或（XOR, ^）**：对每个位执行异或操作，结果是两个操作数相应位不同则该位为1，相同则为0。
+
+#### 示例
+让我们通过几个具体的例子来理解这些操作。假设有两个8位的操作数a和b：
+- a = 0x69 (二进制表示为 01101001)
+- b = 0x55 (二进制表示为 01010101)
+
+它们的按位操作结果如下：
+- **按位与**：0x69 & 0x55 = 0x41 (二进制表示为 01000001)
+- **按位或**：0x69 | 0x55 = 0x7D (二进制表示为 01111101)
+- **按位非**：~0x69 = 0x96 (二进制表示为 10010110)
+- **按位异或**：0x69 ^ 0x55 = 0x3C (二进制表示为 00111100)
+
+#### 位级操作的应用
+
+1. **掩码操作**
+   位级操作常用于掩码操作，即通过特定的位模式选择性地启用或禁用某些位。例如，掩码0xFF表示最低有效的8位：
+   - x & 0xFF 只保留x的最低有效字节。
+
+2. **交换两个变量的值**
+   通过位级异或操作，可以在不使用临时变量的情况下交换两个整数的值：
+   ```c
+   void inplace_swap(int *x, int *y) {
+       *y = *x ^ *y;
+       *x = *x ^ *y;
+       *y = *x ^ *y;
+   }
+   ```
+
+3. **集合操作**
+   位向量可以表示集合，位级操作可以用于集合操作。例如，集合A和B可以用位向量表示，集合的并集、交集和差集可以通过按位或、按位与和按位与非实现：
+   - 并集：a | b
+   - 交集：a & b
+   - 差集：a & ~b
+
+#### 位移操作
+C语言还提供了位移操作，用于将位模式向左或向右移动。左移操作x << k将x的位模式向左移动k位，右移操作x >> k将x的位模式向右移动k位。位移操作可以用于高效的乘法和除法操作：
+- 左移：x << k 等价于 x 乘以 2 的 k 次方
+- 右移：x >> k 等价于 x 除以 2 的 k 次方
+
+#### 实际应用示例
+
+1. **提取字节**
+   通过位移和掩码操作，可以提取整数中的特定位，例如提取最低有效字节：
+   ```c
+   int extract_byte(int x, int i) {
+       return (x >> (i << 3)) & 0xFF;
+   }
+   ```
+
+2. **检查奇偶位**
+   检查一个整数的奇数位是否为1：
+   ```c
+   int any_odd_one(unsigned x) {
+       return !!(x & 0xAAAAAAAA);
+   }
+   ```
+
+3. **旋转位**
+   旋转一个无符号整数的位模式：
+   ```c
+   unsigned rotate_left(unsigned x, int n) {
+       int w = sizeof(int) << 3;
+       return (x << n) | (x >> (w - n));
+   }
+   ```
+
+#### 结论
+位级操作在C语言中提供了强大的工具，用于高效地处理低级别的数据操作。通过理解这些操作及其应用，可以编写更优化和高效的代码。
