--- a/02_程序结构和执行/2.2_整数表示/00_2.2.1_整数数据类型.md
+++ b/02_程序结构和执行/2.2_整数表示/00_2.2.1_整数数据类型.md
@@ -5,3 +5,57 @@ Lecture: 02_程序结构和执行/2.2_整数表示
 Content: 00_2.2.1_整数数据类型
 """
 
+### 2.2.1 整数数据类型
+
+整数数据类型在C语言中非常重要，它们表示一组有限范围的整数。C语言支持多种整数数据类型，这些类型在32位和64位程序中具有不同的值范围。
+
+#### 典型的整数数据类型及其范围
+
+C语言中的整数数据类型及其在32位和64位程序中的典型值范围如下所示：
+
+| 数据类型           | 最小值                   | 最大值                     |
+|--------------------|--------------------------|----------------------------|
+| [signed] char      | -128                     | 127                        |
+| unsigned char      | 0                        | 255                        |
+| short              | -32,768                  | 32,767                     |
+| unsigned short     | 0                        | 65,535                     |
+| int                | -2,147,483,648           | 2,147,483,647              |
+| unsigned int       | 0                        | 4,294,967,295              |
+| long               | -2,147,483,648           | 2,147,483,647              |
+| unsigned long      | 0                        | 4,294,967,295              |
+| int32_t            | -2,147,483,648           | 2,147,483,647              |
+| uint32_t           | 0                        | 4,294,967,295              |
+| int64_t            | -9,223,372,036,854,775,808 | 9,223,372,036,854,775,807 |
+| uint64_t           | 0                        | 18,446,744,073,709,551,615 |
+
+这些数据类型可以指定大小，如`char`、`short`、`long`，以及是否为无符号类型（使用`unsigned`声明）。
+
+#### 固定大小的整数类型
+
+为了确保数据类型在不同编译器和机器上的一致性，ISO C99标准引入了一组固定大小的整数类型，这些类型在头文件`stdint.h`中定义。固定大小的整数类型包括`intN_t`和`uintN_t`，其中N表示位数，如`int32_t`表示32位有符号整数，`uint32_t`表示32位无符号整数。
+
+#### 有符号和无符号整数
+
+C语言支持有符号和无符号整数。有符号整数可以表示负数、零和正数，而无符号整数只能表示非负数。在C标准中，有符号整数的表示方法没有特别指定，但几乎所有机器都使用二进制补码表示法。这种表示法的特点是最左边的一位（最高有效位）表示符号位，0表示正数，1表示负数。
+
+例如，对于8位有符号整数：
+- 最大正数：01111111（127）
+- 最小负数：10000000（-128）
+
+无符号整数的最大值是所有位都为1，例如，8位无符号整数的最大值是255（11111111）。
+
+#### 数值范围和溢出
+
+整数类型在不同的机器和编译器上可能有不同的实现，因此C标准只规定了数据类型的最小范围，而没有规定最大范围。对于需要精确控制数据表示的程序，使用固定大小的整数类型是最佳选择。
+
+溢出是整数运算中的一个常见问题。当一个操作数超过了它的表示范围时，就会发生溢出。例如，对于一个32位的有符号整数，如果结果超过了2,147,483,647或小于-2,147,483,648，就会发生溢出。
+
+#### 数值扩展
+
+在将一个较小的整数类型转换为较大的整数类型时，需要进行数值扩展。有两种主要的扩展方式：
+1. **零扩展**：用于无符号整数，通过在高位添加零来扩展。
+2. **符号扩展**：用于有符号整数，通过在高位添加符号位的副本来扩展。
+
+#### 结论
+
+整数数据类型是C语言中的基本构建块，理解它们的表示范围、符号和无符号的区别，以及数值扩展的方法，对于编写高效和可靠的代码至关重要。通过使用固定大小的整数类型，可以提高程序的可移植性和一致性，避免在不同平台和编译器上的潜在问题。
