--- a/02_程序结构和执行/2.3_整数运算/02_2.3.3_二进制补码求反.md
+++ b/02_程序结构和执行/2.3_整数运算/02_2.3.3_二进制补码求反.md
@@ -5,3 +5,54 @@ Lecture: 02_程序结构和执行/2.3_整数运算
 Content: 02_2.3.3_二进制补码求反
 """
 
+### 2.3.3 二进制补码求反
+
+#### 简介
+在计算机系统中，二进制补码求反是处理有符号整数的一种基本操作。二进制补码表示法是大多数计算机系统用来表示和操作有符号整数的标准方法。理解二进制补码求反的原理和方法，对于编写正确和高效的代码至关重要。
+
+#### 二进制补码表示法
+在w位二进制补码表示法中，最高位（最左边一位）称为符号位。若符号位为0，则表示非负数；若符号位为1，则表示负数。具体的数值由剩余的w-1位决定。
+
+#### 二进制补码求反的定义
+
+对于任意整数x，x的二进制补码求反操作可以表示为：
+$$ -x = \sim x + 1 $$
+其中，$\sim x$表示x的按位取反。
+
+这种方法的理论基础是，任何一个整数的二进制补码表示可以通过对其按位取反并加1来得到其相反数。例如，对于一个4位的二进制数：
+$$ x = 5 \ (\text{二进制为} \ 0101) $$
+$$ \sim x = 1010 $$
+$$ -x = \sim x + 1 = 1010 + 1 = 1011 \ (\text{即} -5) $$
+
+#### 溢出和特殊情况
+在二进制补码表示中，最小的负数（-2^{w-1}）没有对应的正数。例如，对于4位系统，最小负数为-8，其二进制表示为1000。由于其没有对应的正数，所以1000的求反仍为1000。
+
+#### 举例说明
+
+1. **基本例子**：
+   假设有一个4位二进制补码数x = 5，其二进制表示为0101。求反过程如下：
+   $$ \sim x = 1010 $$
+   $$ -x = \sim x + 1 = 1010 + 1 = 1011 \ (\text{即} -5) $$
+
+2. **最小负数**：
+   对于4位系统，最小负数为-8，其二进制表示为1000。求反过程如下：
+   $$ \sim x = 0111 $$
+   $$ -x = \sim x + 1 = 0111 + 1 = 1000 \ (\text{即} -8) $$
+
+#### 数学证明
+
+对于任意一个w位整数x，其二进制补码表示为B2T_w(x)，其负数的表示为-T_w(x)。证明如下：
+$$ -T_w(x) = \sim x + 1 $$
+具体来说，假设x的二进制表示为[x_{w-1}, x_{w-2}, ..., x_0]，则其负数的表示为：
+$$ -x = \sim [x_{w-1}, x_{w-2}, ..., x_0] + 1 $$
+这意味着将x的每一位取反，然后在最低位加1。
+
+#### 应用
+
+1. **算术运算**：在算术运算中，二进制补码求反用于实现减法和负数操作。
+2. **算法设计**：在设计涉及负数的算法时，二进制补码求反是基本操作之一。
+3. **调试与优化**：在调试和优化程序时，理解二进制补码求反有助于识别和解决涉及负数的错误。
+
+#### 结论
+
+二进制补码求反是计算机系统中处理有符号整数的一种基本操作。通过理解二进制补码的表示法和求反原理，可以帮助程序员编写更加健壮和高效的代码。在实际编程中，合理使用二进制补码求反，可以提高数据处理的精度和可靠性。
