--- a/02_程序结构和执行/2.4_浮点数/01_2.4.2_IEEE浮点表示.md
+++ b/02_程序结构和执行/2.4_浮点数/01_2.4.2_IEEE浮点表示.md
@@ -5,3 +5,57 @@ Lecture: 02_程序结构和执行/2.4_浮点数
 Content: 01_2.4.2_IEEE浮点表示
 """
 
+### 2.4.2 IEEE浮点表示
+
+#### IEEE 754标准的背景
+
+在计算机科学领域，浮点数表示法用于处理非常大或非常小的数值。IEEE 754标准是目前广泛采用的浮点数表示标准，它由电气电子工程师学会（IEEE）于1985年制定，旨在统一和规范浮点数的表示和运算规则。这一标准的推广极大地提升了科学计算程序在不同计算机系统之间的可移植性。
+
+#### IEEE 754浮点数表示格式
+
+IEEE 754标准定义了两种主要的浮点数表示格式：单精度（32位）和双精度（64位）。这两种格式都由三部分组成：符号位、指数位和尾数位（又称有效数字部分）。
+
+1. **符号位（Sign bit）**：决定了数值的正负。0表示正数，1表示负数。
+2. **指数位（Exponent field）**：用于表示数值的尺度。指数位采用偏移量（bias）编码方式，单精度偏移量为127，双精度偏移量为1023。
+3. **尾数位（Fraction/Mantissa field）**：表示数值的精确部分。IEEE 754采用隐含的首位1机制，即实际的有效数字部分总是1.xxx的形式。
+
+#### 数值计算方法
+
+IEEE 754浮点数的数值表示如下：
+
+$$ V = (-1)^S \times M \times 2^E $$
+
+其中：
+- $ S $ 为符号位
+- $ M $ 为尾数（有效数字部分），单精度范围为1到2（包含1，不包含2），双精度同理。
+- $ E $ 为指数，计算方法为：实际指数值 - 偏移量
+
+#### 特殊值
+
+IEEE 754标准定义了一些特殊值，用于处理某些极端情况：
+
+1. **零**：正零和负零有不同的表示，符号位不同，但在大多数运算中被视为相同。
+2. **无穷大（Infinity）**：表示超出可表示范围的数值，正无穷大和负无穷大分别用符号位表示。
+3. **非数值（NaN, Not a Number）**：用于表示未定义或不可表示的数值，例如0除以0或负数开平方根。
+
+#### 规范化和非规范化数
+
+1. **规范化数（Normalized Numbers）**：尾数部分以1.xxxx的形式表示，指数范围在-126到127之间（单精度），或-1022到1023之间（双精度）。
+2. **非规范化数（Denormalized Numbers）**：用于表示非常小的数值，尾数部分以0.xxxx的形式表示，指数固定为最小值（单精度为-126，双精度为-1022）。
+
+#### 例子分析
+
+举例来说，考虑单精度浮点数表示的整数12345：
+
+1. **二进制表示**：12345的二进制形式为11000000111001。
+2. **规范化**：将其规范化为1.1000000111001 × $2^{13}$。
+3. **构造尾数和指数**：尾数部分为10000001110010000000000，指数部分为13 + 127 = 140，对应的二进制形式为10001100。
+4. **组合**：最终浮点数表示为01000110010000001110010000000000。
+
+#### 四舍五入和舍入模式
+
+由于浮点数的有限精度，许多数值无法精确表示，需要进行四舍五入。IEEE 754定义了几种舍入模式，包括最常用的“向偶数舍入”（Round to Nearest, ties to even）。
+
+#### 总结
+
+IEEE 754浮点表示法为数值计算提供了一套标准且高效的工具。理解其工作原理有助于编写高效、可靠的科学计算程序，避免数值误差和不一致性问题。
