--- a/03_程序的机器级表示/3.2_程序编码/02_3.2.3_格式化注意事项.md
+++ b/03_程序的机器级表示/3.2_程序编码/02_3.2.3_格式化注意事项.md
@@ -5,3 +5,79 @@ Lecture: 03_程序的机器级表示/3.2_程序编码
 Content: 02_3.2.3_格式化注意事项
 """
 
+### 3.2.3 格式化注意事项
+
+本节详细介绍了生成的汇编代码的格式化注意事项，以及如何通过更清晰的展示方式来理解汇编代码。以下是对关键部分的深入分析：
+
+#### 1. 汇编代码的生成
+
+当我们使用 `gcc` 编译器生成汇编代码时，命令如下：
+
+```sh
+gcc -Og -S mstore.c
+```
+
+生成的汇编文件 `mstore.s` 包含以下内容：
+
+```assembly
+.file "010-mstore.c"
+.text
+.globl multstore
+.type multstore, @function
+multstore:
+pushq %rbx
+movq %rdx, %rbx
+call mult2
+movq %rax, (%rbx)
+popq %rbx
+ret
+.size multstore, .-multstore
+.ident "GCC: (Ubuntu 4.8.1-2ubuntu1~12.04) 4.8.1"
+.section .note.GNU-stack,"",@progbits
+```
+
+这些生成的汇编代码包含许多以 `.` 开头的指令，这些指令主要是用于指导汇编器和链接器的。例如，`.file` 指示符用于指定源文件名，`.text` 指示符用于表明接下来的代码段是可执行代码。
+
+#### 2. 指令的解析与注释
+
+为了使汇编代码更易于理解，我们通常会忽略这些指令，同时添加注释来解释每一行代码的功能。例如：
+
+```assembly
+void multstore(long x, long y, long *dest)
+x in %rdi, y in %rsi, dest in %rdx
+1 multstore:
+2 pushq %rbx    # 保存 %rbx 的值
+3 movq %rdx, %rbx    # 将 dest 的值复制到 %rbx
+4 call mult2    # 调用 mult2(x, y)
+5 movq %rax, (%rbx)    # 将结果存储在 *dest
+6 popq %rbx    # 恢复 %rbx 的值
+7 ret    # 返回
+```
+
+这种格式化方式通过省略多余的指令，并添加注释来解释每条指令的作用，使得代码更具可读性和理解性。
+
+#### 3. 格式化的实用性
+
+汇编代码的格式化对理解程序的机器级表示非常重要。以下几点是格式化汇编代码的实用建议：
+
+- **省略不必要的指令**：许多以 `.` 开头的指令对于理解程序逻辑并不重要，可以省略。
+- **添加注释**：在每条指令后添加注释，解释其作用和与源代码的对应关系。
+- **行号与对齐**：通过添加行号和对齐指令，使代码结构更清晰。
+
+#### 4. 汇编器和链接器指令
+
+尽管许多指令可以忽略，但了解它们的作用对深度调试和优化是有帮助的。以下是一些常见指令的作用：
+
+- `.file`：指定源文件名。
+- `.text`：表示接下来的代码段是可执行代码。
+- `.globl`：声明全局符号。
+- `.type`：指定符号的类型。
+- `.size`：定义符号的大小。
+- `.ident`：插入标识符信息。
+- `.section`：定义新的段或改变段属性。
+
+#### 5. 编译器生成的代码样式
+
+不同的编译器和编译选项会生成不同风格的汇编代码。例如，优化级别 `-Og` 旨在提供易于调试的优化，这可能会影响生成代码的结构和注释。
+
+通过格式化汇编代码并添加注释，可以更好地理解机器级程序的执行流程，有助于调试和优化程序性能。了解这些格式化注意事项，可以帮助我们更深入地掌握程序编码和计算机系统的工作原理。
