--- a/03_程序的机器级表示/3.3_数据格式/3.3_数据格式.md
+++ b/03_程序的机器级表示/3.3_数据格式/3.3_数据格式.md
@@ -5,3 +5,71 @@ Lecture: 03_程序的机器级表示/3.3_数据格式
 Content: 3.3_数据格式
 """
 
+### 3.3 数据格式详细分析
+
+本节探讨了在程序的机器级表示中，数据格式的重要性和不同数据类型在内存中的表示。以下是对关键部分的深入分析：
+
+#### 1. 数据类型和大小
+
+现代计算机支持多种数据格式和不同的长度，包括整数和浮点数。例如，许多机器有处理单字节、2 字节、4 字节和 8 字节整数的指令。浮点数通常有 4 字节的单精度和 8 字节的双精度表示。
+
+##### 常见数据类型和大小
+
+- **char**：1 字节
+- **short**：2 字节
+- **int**：4 字节
+- **long**：32 位系统中为 4 字节，64 位系统中为 8 字节
+- **float**：4 字节
+- **double**：8 字节
+- **指针类型**：在 32 位系统中为 4 字节，在 64 位系统中为 8 字节
+
+#### 2. 数据格式的表示
+
+由于其起源于 16 位架构并扩展到 32 位，Intel 使用术语“word”来表示 16 位数据类型。基于此，他们将 32 位数量称为“双字”（double words），将 64 位数量称为“四字”（quad words）。例如，在 x86-64 架构中，标准 int 值以双字（32 位）存储，指针以 8 字节的四字存储。
+
+#### 3. 数据对齐
+
+许多计算机系统对基本数据类型的允许地址施加了限制，要求某些对象的地址必须是某个值 K（通常是 2、4 或 8）的倍数。这些对齐限制简化了处理器和内存系统之间接口的设计。例如，x86-64 硬件在数据对齐时性能更好，尽管它在不对齐时也能正确工作。Intel 建议数据对齐以提高内存系统性能。
+
+常见的对齐规则是：任意 K 字节的原始对象，其地址必须是 K 的倍数。这意味着：
+
+- **1 字节**：`char`
+- **2 字节**：`short`
+- **4 字节**：`int`, `float`
+- **8 字节**：`long`, `double`, `char*`
+
+#### 4. 字节序
+
+字节序指示在内存中存储多字节对象的字节顺序。主要有两种字节序：
+
+- **小端序（Little Endian）**：最低有效字节存储在最低的内存地址。
+- **大端序（Big Endian）**：最高有效字节存储在最低的内存地址。
+
+在 x86-64 架构中，通常使用小端序。例如，一个 32 位整数 0x12345678 在小端序机器中的存储顺序为 `0x78 0x56 0x34 0x12`。
+
+#### 5. 浮点数表示
+
+浮点数使用 IEEE 标准 754 表示，包括单精度（32 位）和双精度（64 位）格式。浮点数的表示由三个部分组成：
+
+- **符号位（s）**：表示数的正负。
+- **指数（E）**：以偏移量形式存储。
+- **尾数（M）**：存储有效数字。
+
+##### 标准浮点格式
+
+- **单精度**：1 位符号位，8 位指数，23 位尾数。
+- **双精度**：1 位符号位，11 位指数，52 位尾数。
+
+IEEE 浮点数标准还包括一些特殊值的表示，如正无穷大、负无穷大和 NaN（非数值）。
+
+#### 6. 使用固定大小的数据类型
+
+为避免依赖“典型”大小和不同编译器设置的差异，ISO C99 引入了一类固定大小的数据类型，例如 `int32_t` 和 `int64_t`，分别为 4 字节和 8 字节。使用固定大小的整数类型可以让程序员更好地控制数据表示。
+
+#### 7. 数据类型的便携性
+
+程序员应尽量使他们的程序在不同的机器和编译器上具有可移植性。C 标准定义了每种数据类型必须能够表示的最小范围，但没有上限。这种灵活性允许 C 能够在广泛的机器上实现，但也要求程序员在编写代码时注意避免依赖特定的实现细节。
+
+### 结论
+
+通过详细分析数据格式及其表示方法，可以更好地理解计算机系统如何管理和操作不同类型的数据。这对于编写高效、可靠和可移植的代码至关重要。理解数据对齐、字节序以及浮点数表示等概念，有助于优化程序性能，并避免潜在的编程错误。
