--- a/02_程序结构和执行/2.1_表示和操作信息/01_2.1.2_数据大小.md
+++ b/02_程序结构和执行/2.1_表示和操作信息/01_2.1.2_数据大小.md
@@ -5,3 +5,51 @@ Lecture: 02_程序结构和执行/2.1_表示和操作信息
 Content: 01_2.1.2_数据大小
 """
 
+### 2.1.2 数据大小详解
+
+#### 数据大小的基本概念
+
+在计算机系统中，数据的大小由所使用的数据类型决定。不同的数据类型占用不同的字节数，影响数据的存储和处理方式。了解数据大小的基本概念对于编写高效的程序和理解底层系统行为至关重要。
+
+#### 计算机的字长
+
+每台计算机都有一个字长（word size），表示指针数据的名义大小。虚拟地址由这个字长编码，因此字长决定了虚拟地址空间的最大大小。例如，32位字长的系统的虚拟地址空间最大为4GB（即4 × 10^9字节），而64位字长的系统的虚拟地址空间最大可达16EB（即1.84 × 10^19字节）  。
+
+#### 数据类型及其大小
+
+C语言支持多种数据格式，包括整数和浮点数。计算机和编译器通过不同的编码方式支持这些数据格式，并提供了操作这些数据的指令。常见的数据类型及其典型大小如下表所示  ：
+
+| **C声明**            | **字节数（32位）** | **字节数（64位）** |
+|---------------------|-------------------|-------------------|
+| `[signed] char`     | 1                 | 1                 |
+| `unsigned char`     | 1                 | 1                 |
+| `short`             | 2                 | 2                 |
+| `unsigned short`    | 2                 | 2                 |
+| `int`               | 4                 | 4                 |
+| `unsigned`          | 4                 | 4                 |
+| `long`              | 4                 | 8                 |
+| `unsigned long`     | 4                 | 8                 |
+| `int32_t`           | 4                 | 4                 |
+| `uint32_t`          | 4                 | 4                 |
+| `int64_t`           | 8                 | 8                 |
+| `uint64_t`          | 8                 | 8                 |
+| `char *`            | 4                 | 8                 |
+| `float`             | 4                 | 4                 |
+| `double`            | 8                 | 8                 |
+
+#### 数据大小的重要性
+
+1. **内存使用**：数据类型的大小直接影响程序的内存使用情况。选择合适的数据类型可以优化内存分配，提高程序效率。
+2. **数据对齐**：不同数据类型在内存中的对齐方式可能不同，了解数据大小有助于理解数据对齐和内存布局。
+3. **性能优化**：在编写高性能程序时，选择合适的数据类型和大小可以减少内存访问时间，提高程序执行速度。
+4. **移植性**：确保程序在不同平台上运行时具有一致性，避免因数据类型大小不同导致的兼容性问题。
+
+#### 例子和应用
+
+在实际编程中，合理选择数据类型及其大小至关重要。例如，在处理大规模数据时，使用较小的数据类型可以显著减少内存使用。在需要高精度计算时，选择合适的浮点数类型可以确保计算结果的准确性。
+
+此外，理解不同平台的数据类型大小对于编写跨平台程序非常重要。例如，32位和64位系统上的`long`类型大小不同，可能会导致数据溢出或内存错误。通过使用固定大小的数据类型（如`int32_t`和`int64_t`），可以避免这些问题。
+
+#### 总结
+
+数据大小是计算机系统中一个基本且重要的概念。了解不同数据类型的大小及其影响，有助于编写高效、可靠和可移植的程序。在实际应用中，合理选择和使用数据类型，可以优化程序性能，确保数据处理的准确性和一致性   。
