--- a/02_程序结构和执行/2.1_表示和操作信息/02_2.1.3_地址和字节顺序.md
+++ b/02_程序结构和执行/2.1_表示和操作信息/02_2.1.3_地址和字节顺序.md
@@ -5,3 +5,58 @@ Lecture: 02_程序结构和执行/2.1_表示和操作信息
 Content: 02_2.1.3_地址和字节顺序
 """
 
+### 2.1.3 地址和字节顺序详解
+
+#### 地址的基本概念
+
+在计算机系统中，每个存储位置都有一个唯一的地址，用于标识和访问存储在该位置的数据。地址通常表示为一个无符号整数，范围取决于系统的字长（word size）。例如，32位系统的地址范围为0到2³²-1，而64位系统的地址范围为0到2⁶⁴-1。
+
+#### 字节顺序的基本概念
+
+当程序对象跨越多个字节时，需要确定对象的地址和在内存中的字节顺序。几乎所有的机器都将多字节对象存储为连续的字节序列，对象的地址由使用的字节中最小的地址给出。例如，假设一个类型为int的变量x的地址为0x100，即表达式&x的值为0x100，那么（假设数据类型int具有32位表示），x的4个字节将存储在内存地址0x100, 0x101, 0x102和0x103中。
+
+#### 字节顺序的类型
+
+1. **小端（Little Endian）**：最不重要字节在前，最重要字节在后。即在内存中低位字节存储在低地址，高位字节存储在高地址。例如，整数0x01234567存储为：
+    - 0x100: 67
+    - 0x101: 45
+    - 0x102: 23
+    - 0x103: 01
+
+2. **大端（Big Endian）**：最重要字节在前，最不重要字节在后。即在内存中高位字节存储在低地址，低位字节存储在高地址。例如，整数0x01234567存储为：
+    - 0x100: 01
+    - 0x101: 23
+    - 0x102: 45
+    - 0x103: 67
+
+#### 字节顺序的影响
+
+1. **网络传输**：在网络传输中，数据必须遵循统一的字节顺序标准。TCP/IP协议定义了大端字节顺序为网络字节顺序，确保不同字节顺序的主机之间的数据传输能够正确解读。例如，IP地址和端口号在传输前需要转换为网络字节顺序。
+
+2. **系统级编程**：在系统级编程中，字节顺序的选择可能会影响到数据的处理和存储方式。例如，在调试和反汇编代码时，需要了解目标机器的字节顺序，以正确解读内存中的数据表示。
+
+3. **数据存储**：在多字节数据（如整数和浮点数）的存储和读取过程中，字节顺序决定了如何将字节序列重新组合成原始数据。这对于跨平台数据交换和文件格式解析尤为重要。
+
+#### 示例和应用
+
+假设一个变量x类型为int，地址为0x100，其值为0x01234567。根据字节顺序的不同，其内存布局如下：
+
+- 小端（Little Endian）：
+    - 0x100: 67
+    - 0x101: 45
+    - 0x102: 23
+    - 0x103: 01
+
+- 大端（Big Endian）：
+    - 0x100: 01
+    - 0x101: 23
+    - 0x102: 45
+    - 0x103: 67
+
+#### 字节顺序的由来
+
+字节顺序的术语“小端”和“大端”来源于乔纳森·斯威夫特的小说《格列佛游记》，其中描述了利立浦特和布莱福斯库两国之间关于如何打破鸡蛋的小端和大端的争论。这个术语后来被网络协议的早期先驱丹尼·科恩用来描述计算机系统中的字节顺序问题，并被广泛接受。
+
+#### 总结
+
+地址和字节顺序是计算机系统中基本且重要的概念。了解不同字节顺序的特点及其对数据存储和处理的影响，对于编写高效、可靠和跨平台的程序至关重要。在实际应用中，合理处理字节顺序问题，可以确保数据在不同系统之间的正确传输和解释。
