--- a/02_程序结构和执行/2.1_表示和操作信息/05_2.1.6_布尔代数简介.md
+++ b/02_程序结构和执行/2.1_表示和操作信息/05_2.1.6_布尔代数简介.md
@@ -5,3 +5,77 @@ Lecture: 02_程序结构和执行/2.1_表示和操作信息
 Content: 05_2.1.6_布尔代数简介
 """
 
+### 2.1.6 布尔代数简介
+布尔代数是一种数学体系，主要研究二值系统，即仅包含0和1的系统。这种代数体系由乔治·布尔（George Boole，1815-1864）于19世纪中叶提出，旨在将逻辑运算形式化，使之能够进行数学处理。在计算机科学中，布尔代数用于描述和操作计算机存储和处理的信息。
+
+#### 基本运算和符号
+布尔代数定义了若干基本运算，这些运算在C语言中的表示方式如下：
+- **非（NOT，符号：~）**：将1变为0，将0变为1。例如，~1 = 0，~0 = 1。
+- **与（AND，符号：&）**：两个操作数都为1时结果为1，否则为0。例如，1 & 1 = 1，1 & 0 = 0。
+- **或（OR，符号：|）**：至少有一个操作数为1时结果为1，否则为0。例如，1 | 0 = 1，0 | 0 = 0。
+- **异或（XOR，符号：^）**：操作数不同时结果为1，相同时为0。例如，1 ^ 0 = 1，1 ^ 1 = 0。
+
+下表展示了这些运算的具体结果：
+
+| p | q | ~p | p & q | p | q | p ^ q |
+|---|---|----|-------|-------|-------|
+| 0 | 0 | 1  | 0     | 0     | 0     |
+| 0 | 1 | 1  | 0     | 1     | 1     |
+| 1 | 0 | 0  | 0     | 1     | 1     |
+| 1 | 1 | 0  | 1     | 1     | 0     |
+
+#### 扩展到位向量的运算
+布尔运算不仅适用于单个位，还可以扩展到位向量。假设a和b是长度为w的位向量，a = [a_{w-1}, a_{w-2}, ..., a_0]，b = [b_{w-1}, b_{w-2}, ..., b_0]，则：
+- **a & b**：长度为w的位向量，其第i位为a_i & b_i。
+- **a | b**：长度为w的位向量，其第i位为a_i | b_i。
+- **a ^ b**：长度为w的位向量，其第i位为a_i ^ b_i。
+- **~a**：长度为w的位向量，其第i位为~a_i。
+
+例如，若w = 4，a = [0110]，b = [1100]，则：
+- a & b = [0100]
+- a | b = [1110]
+- a ^ b = [1010]
+- ~b = [0011]
+
+#### 布尔代数的应用
+克劳德·香农（Claude Shannon，1916-2001）将布尔代数应用于数字电路的设计和分析。他在1937年的硕士论文中证明了布尔代数可以用于分析电动继电器网络的设计。尽管计算机技术自那时以来有了很大的发展，布尔代数在数字系统设计和分析中的核心作用依然未变。
+
+布尔代数还可以用于集合的表示和操作。例如，我们可以使用长度为w的位向量来编码一个集合A ⊆ {0, 1, ..., w-1}，其中，当且仅当i ∈ A时，a_i = 1。对于集合A = {0, 3, 5, 6}，可以用位向量[01101001]表示；对于集合B = {0, 2, 4, 6}，可以用位向量[01010101]表示。布尔运算在这种编码下对应于集合的基本操作：
+- **并集（Union）**：a | b
+- **交集（Intersection）**：a & b
+- **补集（Complement）**：~a
+
+例如，对于A = {0, 3, 5, 6}，B = {0, 2, 4, 6}：
+- A ∪ B = {0, 2, 3, 4, 5, 6}，对应的位向量为[01111101]。
+- A ∩ B = {0, 6}，对应的位向量为[01000001]。
+
+布尔代数在计算机科学中的应用广泛，包括逻辑电路设计、数字系统分析和集合操作等方面。
+
+### 详细分析与扩展
+
+#### 布尔代数的性质
+布尔代数具有一些重要性质，这些性质类似于整数的算术运算。例如，乘法分配律在布尔代数中表现为：
+$$ a \cdot (b + c) = (a \cdot b) + (a \cdot c) $$
+对应的布尔运算为：
+$$ a \& (b | c) = (a \& b) | (a \& c) $$
+
+此外，布尔代数中还有一些独特的性质，例如：
+- 自反性：对于任何布尔值a，有$ a \oplus a = 0 $。
+- 交换律和结合律：布尔运算满足交换律和结合律，例如$ a \oplus b = b \oplus a $，且$ a \oplus (b \oplus c) = (a \oplus b) \oplus c $。
+
+这些性质使得布尔代数在简化逻辑表达式、优化数字电路设计方面非常有用。
+
+#### 数字电路中的应用
+布尔代数在数字电路设计中起着至关重要的作用。逻辑门（如与门、或门、非门）是布尔代数在硬件中的实现。通过组合这些逻辑门，可以构建复杂的逻辑电路，如加法器、乘法器和数据选择器等。
+
+例如，加法器可以使用布尔运算实现。一个简单的半加器由两个输入（a和b）和两个输出（和s与进位c）组成，其逻辑关系为：
+$$ s = a \oplus b $$
+$$ c = a \cdot b $$
+
+#### 现实世界中的应用
+布尔代数不仅在计算机科学中应用广泛，还在许多现实世界的问题中得到应用。例如，搜索引擎使用布尔代数进行关键词的逻辑组合，控制系统使用布尔逻辑进行状态控制，人工智能中的决策树和逻辑推理也依赖布尔代数。
+
+通过深入理解布尔代数及其性质和应用，可以更好地设计和分析计算机系统和算法，提高工作效率和系统性能。
+
+### 结论
+布尔代数是计算机科学中的基础数学工具，它将逻辑运算形式化，使之能够进行数学处理。在计算机系统的设计、分析和优化中，布尔代数扮演了重要角色。理解和掌握布尔代数及其运算、性质和应用，对于从事计算机科学及相关领域的工作具有重要意义。
