--- a/02_程序结构和执行/2.2_整数表示/02_2.2.3_二进制补码编码.md
+++ b/02_程序结构和执行/2.2_整数表示/02_2.2.3_二进制补码编码.md
@@ -5,3 +5,60 @@ Lecture: 02_程序结构和执行/2.2_整数表示
 Content: 02_2.2.3_二进制补码编码
 """
 
+### 2.2.3 二进制补码编码
+
+#### 简介
+二进制补码（Two’s Complement）是计算机中表示有符号整数的标准方式。它通过赋予最重要位（最高位）负的权重来表示负数。与其他表示法相比，二进制补码的优点在于，它使加法和减法操作统一，并且解决了零的双重表示问题。
+
+#### 补码表示法的定义
+
+对于一个长度为w的位向量$$x_{w-1}, x_{w-2}, ..., x_0$$，其二进制补码表示的数值通过如下公式计算：
+$$ B2T_w(x) = -x_{w-1} \cdot 2^{w-1} + \sum_{i=0}^{w-2} x_i \cdot 2^i $$
+
+其中，$x_{w-1}$是符号位，当其为1时表示负数，为0时表示非负数。
+
+#### 示例
+以4位二进制补码表示为例，其可能的值范围为-8到7。几个具体的例子如下：
+- $ B2T_4([0001]) = -0 \cdot 2^3 + 0 \cdot 2^2 + 0 \cdot 2^1 + 1 \cdot 2^0 = 1 $
+- $ B2T_4([0101]) = -0 \cdot 2^3 + 1 \cdot 2^2 + 0 \cdot 2^1 + 1 \cdot 2^0 = 4 + 1 = 5 $
+- $ B2T_4([1011]) = -1 \cdot 2^3 + 0 \cdot 2^2 + 1 \cdot 2^1 + 1 \cdot 2^0 = -8 + 2 + 1 = -5 $
+- $ B2T_4([1111]) = -1 \cdot 2^3 + 1 \cdot 2^2 + 1 \cdot 2^1 + 1 \cdot 2^0 = -8 + 4 + 2 + 1 = -1 $
+
+#### 最大值和最小值
+对于宽度为w的二进制补码整数，其最小值为-$2^{w-1}$，最大值为$2^{w-1} - 1$。因此，对于4位二进制补码整数，其取值范围为-8到7。
+
+例如，对于4位二进制补码整数：
+- 最小值：$$1000$$ = -8
+- 最大值：$$0111$$ = 7
+
+#### 唯一性
+二进制补码表示具有唯一性，即每一个整数值在-$2^{w-1}$到$2^{w-1} - 1$范围内都有一个唯一的w位二进制表示。数学上，这意味着二进制补码编码是一个双射（bijection），即每个二进制补码整数都有唯一的二进制表示，反之亦然。
+
+#### 二进制补码的加法
+二进制补码表示的一个重要特点是加法和减法操作的一致性。计算两个二进制补码数的和时，可以直接进行二进制加法，并忽略进位。例如，两个4位二进制补码数的加法：
+- $$0101$$ + $$0011$$ = $$1000$$（5 + 3 = 8，结果溢出，但按4位表示为-8）
+- $$1101$$ + $$0110$$ = $$0011$$（-3 + 6 = 3）
+
+#### 溢出检测
+在二进制补码加法中，溢出发生在两种情况下：
+1. 两个正数相加得到一个负数。
+2. 两个负数相加得到一个正数。
+
+例如：
+- $$0111$$ + $$0001$$ = $$1000$$（7 + 1 = -8，正溢出）
+- $$1000$$ + $$1000$$ = $$0000$$（-8 + -8 = 0，负溢出）
+
+#### 二进制补码的优点
+1. **统一加法和减法**：二进制补码使得加法和减法操作可以统一使用二进制加法来实现，从而简化了硬件设计。
+2. **消除零的双重表示**：与原码（sign-magnitude）和反码（one’s complement）表示不同，二进制补码只有一个零的表示。
+3. **方便比较操作**：二进制补码的数值比较可以直接使用二进制数的大小比较。
+
+#### 二进制补码的缺点
+1. **表示范围不对称**：二进制补码表示的负数范围比正数范围多一个值，例如，对于4位二进制补码，最小值为-8，最大值为7。
+2. **负数表示复杂**：理解和手动计算二进制补码负数的表示相对复杂，需要进行位操作和加法运算。
+
+#### 应用
+二进制补码广泛应用于计算机系统中，特别是在处理有符号整数的算术运算时。几乎所有现代计算机和编程语言都使用二进制补码来表示有符号整数。
+
+### 结论
+二进制补码是计算机系统中表示有符号整数的标准方法。通过赋予最高位负的权重，二进制补码使得加法和减法操作可以统一，解决了零的双重表示问题，并且方便了数值比较。理解和掌握二进制补码的原理，对于编写高效和正确的计算机程序具有重要意义。
