--- a/02_程序结构和执行/2.3_整数运算/00_2.3.1_无符号加法.md
+++ b/02_程序结构和执行/2.3_整数运算/00_2.3.1_无符号加法.md
@@ -5,3 +5,57 @@ Lecture: 02_程序结构和执行/2.3_整数运算
 Content: 00_2.3.1_无符号加法
 """
 
+### 2.3.1 无符号加法
+
+#### 简介
+在C语言中，无符号整数加法是一种基础操作，它在处理数据时非常常见。无符号加法操作不仅包括简单的数值相加，还涉及进位和溢出的处理。了解无符号加法的工作原理，对于编写高效和正确的程序至关重要。
+
+#### 无符号加法的定义
+
+对于两个非负整数 $x$ 和 $y$，假设它们的值满足 $0 \leq x, y < 2^w$，即它们可以用 $w$ 位无符号数表示。那么它们的和 $x + y$ 的范围是 $0 \leq x + y \leq 2^{w+1} - 2$。这意味着，表示这个和可能需要 $w + 1$ 位。
+
+为了进行无符号加法，我们定义操作 $ +_w $，其结果为截断整数和使其长度为 $w$ 位，并将结果视为无符号数。具体如下：
+$$ x +_w y = \left\{
+\begin{aligned}
+& x + y, \quad \text{如果} \ x + y < 2^w \ \text{(正常)} \\
+& x + y - 2^w, \quad \text{如果} \ 2^w \leq x + y < 2^{w+1} \ \text{(溢出)} 
+\end{aligned}
+\right. $$
+
+#### 例子
+
+假设我们有两个4位无符号整数 $x = 9$ 和 $y = 12$，它们的二进制表示分别为 $[1001]$ 和 $[1100]$。它们的和为21，二进制表示为 $[10101]$。但是，如果我们丢弃最高位，结果为 $[0101]$，即十进制的5。这个结果与21模16的结果相同。
+
+#### 溢出检测
+
+在执行无符号加法时，溢出是一个重要的考虑因素。溢出发生在两个操作数的和超过了当前数据类型的最大值 $2^w - 1$。我们可以通过以下方式检测溢出：
+$$ \text{若} \ s = x +_w y, \ \text{则当且仅当} \ s < x \ (\text{或等价地} \ s < y) \ \text{时，发生溢出} $$
+
+举个例子，假设我们有两个4位无符号整数 $x = 9$ 和 $y = 12$，计算 $s = x +_w y$ 得到5。因为5小于9，所以可以确定发生了溢出。
+
+#### 模运算
+
+无符号加法可以视为一种模运算，即计算结果是对 $2^w$ 取模的结果。例如，对于4位无符号数，和的计算结果对16取模。这样，当 $x + y < 16$ 时，结果正常；当 $x + y \geq 16$ 时，结果为溢出部分减去16的值。
+
+#### 数学结构
+
+无符号加法形成了一种数学结构，称为阿贝尔群（Abelian group）。这一结构具有交换性（commutative）和结合性（associative）；它有一个单位元素0，并且每个元素都有一个加法逆元。对于每个值 $x$，存在某个值 $-_w x$ 使得 $-_w x +_w x = 0$。
+
+无符号数的加法逆元可以表示为：
+$$ -_w x = \left\{
+\begin{aligned}
+& x, \quad \text{如果} \ x = 0 \\
+& 2^w - x, \quad \text{如果} \ x > 0 
+\end{aligned}
+\right. $$
+
+#### 应用
+
+无符号加法在许多计算和数据处理中都有广泛的应用，包括：
+1. **位运算**：用于处理位掩码和标志位。
+2. **地址计算**：在内存地址计算中，地址自然是无符号数。
+3. **数学运算**：在实现数学运算模块时，如模运算和多精度运算，数字表示为无符号数有助于避免负数带来的复杂性。
+
+#### 结论
+
+无符号加法是C语言中的一个基本操作，但它涉及到进位和溢出的处理。理解无符号加法的工作原理和数学基础，可以帮助程序员编写更安全和高效的代码。在实际编程中，通过合理使用无符号加法，可以提高数据处理的精度和可靠性。
