--- a/02_程序结构和执行/2.3_整数运算/05_2.3.6_用常数乘法.md
+++ b/02_程序结构和执行/2.3_整数运算/05_2.3.6_用常数乘法.md
@@ -5,3 +5,73 @@ Lecture: 02_程序结构和执行/2.3_整数运算
 Content: 05_2.3.6_用常数乘法
 """
 
+### 05_2.3.6_用常数乘法
+
+#### 概述
+
+在计算机体系结构中，整数乘法操作通常相对较慢，这源于它在硬件层面需要更多的时钟周期来完成。因此，在许多计算平台上，通过常数乘法优化算法性能是一个常见的做法。这种优化方法包括将乘法运算替换为移位和加法运算，从而提升执行效率。
+
+#### 乘以2的幂
+
+乘以2的幂是最简单的常数乘法优化方式。例如，对于任意整数 $ x $ 和非负整数 $ k $ ， $ x \times 2^k $ 可以通过将 $ x $ 左移 $ k $ 位来实现，即：
+
+$$ x \times 2^k = x \ll k $$
+
+这种操作在硬件上极为高效，因为移位操作通常只需一个时钟周期即可完成。
+
+#### 常数乘法的优化方法
+
+对于非2的幂常数的乘法，可以使用移位和加法的组合来实现。例如：
+
+- **乘以14**：由于14可以表示为 $ 2^3 + 2^2 + 2^1 $，即：
+
+$$ x \times 14 = x \times (2^3 + 2^2 + 2^1) = (x \ll 3) + (x \ll 2) + (x \ll 1) $$
+
+- **乘以7**：由于7可以表示为 $ 2^3 - 1 $，即：
+
+$$ x \times 7 = x \times (2^3 - 1) = (x \ll 3) - x $$
+
+这种方法利用了位操作的快速特性，可以显著提高乘法运算的性能。
+
+#### 移位与加法的综合应用
+
+编译器通常会自动识别和优化这些常数乘法。例如：
+
+- **乘以15**：由于15可以表示为 $ 2^4 - 1 $，即：
+
+$$ x \times 15 = x \times (2^4 - 1) = (x \ll 4) - x $$
+
+- **乘以60**：由于60可以表示为 $ 64 - 4 $，即：
+
+$$ x \times 60 = x \times (2^6 - 2^2) = (x \ll 6) - (x \ll 2) $$
+
+这些优化不仅减少了乘法运算的时钟周期，还能在一定程度上减少功耗，因为加法和移位操作在硬件实现中通常比乘法更节能。
+
+#### 常数乘法的实际应用
+
+在实际编程中，尤其是在对性能要求较高的场合，如嵌入式系统和高性能计算中，这些优化方法被广泛应用。开发者可以通过手动优化代码或依赖编译器的自动优化来实现这些改进。
+
+#### 编译器优化实例
+
+现代编译器（如GCC、Clang）会自动检测和应用这些优化。例如，在GCC中，针对如下代码：
+
+```c
+int multiply_by_14(int x) {
+    return x * 14;
+}
+```
+
+编译器会将其转换为：
+
+```c
+int multiply_by_14(int x) {
+    return (x << 3) + (x << 2) + (x << 1);
+}
+```
+
+这种转换大大提高了代码的执行效率，使得乘法操作能够以更少的时钟周期完成。
+
+### 总结
+
+用常数乘法优化是计算机体系结构中一个重要的技巧，通过将乘法转换为更高效的移位和加法操作，可以显著提升运算性能。在编写高性能代码时，理解并利用这些优化方法，对于提升整体系统性能具有重要意义。
+
