--- a/03_程序的机器级表示/3.2_程序编码/01_3.2.2_代码示例.md
+++ b/03_程序的机器级表示/3.2_程序编码/01_3.2.2_代码示例.md
@@ -5,3 +5,94 @@ Lecture: 03_程序的机器级表示/3.2_程序编码
 Content: 01_3.2.2_代码示例
 """
 
+### 3.2.2 代码示例详细分析
+
+本节深入分析了如何通过具体的代码示例来理解程序的机器级表示，以及从高级语言到机器码的转换过程。
+
+#### 1. C语言源代码示例
+
+让我们从一个简单的 C 语言源代码文件 `mstore.c` 开始，它包含一个函数 `multstore` 的定义：
+
+```c
+long mult2(long, long);
+
+void multstore(long x, long y, long *dest) {
+    long t = mult2(x, y);
+    *dest = t;
+}
+```
+
+这个函数的作用是调用 `mult2` 函数，将两个长整型数相乘，并将结果存储在 `dest` 指针指向的地址处。
+
+#### 2. 编译生成汇编代码
+
+使用 `gcc` 编译器，我们可以将上述 C 代码编译成汇编代码：
+
+```sh
+gcc -Og -S mstore.c
+```
+
+这条命令会生成一个汇编文件 `mstore.s`，其内容如下：
+
+```assembly
+multstore:
+    pushq %rbx
+    movq %rdx, %rbx
+    call mult2
+    movq %rax, (%rbx)
+    popq %rbx
+    ret
+```
+
+##### 汇编代码逐行解析
+
+1. `pushq %rbx`：将寄存器 `%rbx` 的值压入栈中。这是为了保存调用者的寄存器值，以便在函数返回时恢复。
+2. `movq %rdx, %rbx`：将寄存器 `%rdx` 中的值移动到 `%rbx`。在函数调用约定中，参数 `dest` 被传递到 `%rdx`，因此此处将其保存到 `%rbx` 中。
+3. `call mult2`：调用 `mult2` 函数。调用函数会将当前的指令指针（返回地址）压入栈中，然后跳转到 `mult2` 函数的地址执行。
+4. `movq %rax, (%rbx)`：将寄存器 `%rax` 中的值存储到 `%rbx` 指向的内存地址处。`%rax` 存储的是 `mult2` 函数的返回值。
+5. `popq %rbx`：从栈中弹出值到 `%rbx`，恢复之前保存的寄存器值。
+6. `ret`：返回到调用函数，通过栈中的返回地址。
+
+#### 3. 生成目标代码
+
+使用以下命令可以将 `mstore.c` 编译成目标代码：
+
+```sh
+gcc -Og -c mstore.c
+```
+
+这将生成一个二进制格式的目标文件 `mstore.o`，其中包含对应于汇编代码的机器指令。以下是机器指令的十六进制表示：
+
+```hex
+53 48 89 d3 e8 00 00 00 00 48 89 03 5b c3
+```
+
+##### 机器指令逐字节解析
+
+1. `53`：对应 `pushq %rbx` 指令。
+2. `48 89 d3`：对应 `movq %rdx, %rbx` 指令。
+3. `e8 00 00 00 00`：对应 `call mult2` 指令（其中 `00 00 00 00` 是相对偏移地址的占位符，链接时会被修正）。
+4. `48 89 03`：对应 `movq %rax, (%rbx)` 指令。
+5. `5b`：对应 `popq %rbx` 指令。
+6. `c3`：对应 `ret` 指令。
+
+#### 4. 程序存储结构
+
+在机器级别，程序的存储结构包括以下几个部分：
+
+- **指令部分**：存储程序的可执行机器代码。
+- **数据部分**：存储程序运行过程中需要的数据，如全局变量、静态变量等。
+- **堆栈**：用于管理函数调用和返回，包括局部变量和返回地址。
+- **堆**：用于动态内存分配（例如通过 `malloc` 函数）。
+
+#### 5. 虚拟地址空间
+
+现代计算机使用虚拟地址空间来管理内存。虚拟地址通过操作系统和硬件支持的内存管理单元（MMU）映射到物理内存地址。每个进程有自己的虚拟地址空间，彼此独立，确保进程间的内存隔离和安全性。
+
+#### 6. 从汇编到机器码的转变
+
+编译器在将高级语言转换为机器代码的过程中，执行了一系列复杂的优化和转换。汇编代码和机器码提供了对这些优化和转换的直接视图：
+
+- **指令选择**：编译器选择适合目标架构的机器指令。
+- **寄存器分配**：编译器确定每个变量存储在哪个寄存器中。
+- **指令调度**：编译器重新排序指令以提高流水线效率。
